--- a/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.scss
+++ b/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.scss
@@ -5,7 +5,7 @@
         --border-radius: 7px !important;
         margin-left: 0px !important;
     }
-    ion-avatar {
+    ion-avatar, ion-label {
         margin-left: 10px !important;
     }
     ion-label {
