--- a/src/app/shared/components/modal_components/full-modal/full-modal.component.html
+++ b/src/app/shared/components/modal_components/full-modal/full-modal.component.html
@@ -27,7 +27,7 @@
       <loading [text]="loadingText" *ngIf="isLoading"></loading>
     </ion-content>
 
-    <ion-footer [ngClass]="footerClass">
+    <ion-footer [ngClass]="footerClass" color="green">
       <ng-content select="[modal-footer]"></ng-content>
     </ion-footer>
   </ng-template>
