--- a/src/app/shared/components/onboarding/onboarding.component.html
+++ b/src/app/shared/components/onboarding/onboarding.component.html
@@ -3,23 +3,39 @@
   <swiper-container #swiper class="myIntroSwiper" [slidesPerView]="1.0" space-between="0px">
     <ng-container>
       <swiper-slide>
+        <img src="assets/img/bg/pension not tension jpeg uche.jpg" id="content-page" />
         <ion-item lines="none" color="white">
-          <ion-label class="ion-text-wrap" align="center">
-            <h2 class="fs-18 ion-margin-bottom">Connect Your Friends Anytime, Anywhere</h2>
-            <p class="ion-margin-top">To automatically focus the next input when done with the previous one we modify</p>
+          <ion-label class="ion-text-wrap" align="left">
+            <h2 class="fs-20 text-primary ion-margin-bottom bold">Start Pension Planning now</h2>
+            <p class="ion-margin-top">Pension planning? Where dreams meet reality. Start planning your pension now</p>
           </ion-label>
         </ion-item>
       </swiper-slide>
     </ng-container>
     <ng-container>
       <swiper-slide>
+        <img src="assets/img/bg/Monday motivation uche 1.jpg" id="content-page" />
         <ion-item lines="none" color="white">
-          <ion-label class="ion-text-wrap" align="center">
-            <h2 class="fs-18 ion-margin-bottom">Connect Your Friends Anytime, Anywhere</h2>
+          <ion-label class="ion-text-wrap" align="left">
+            <h2 class="fs-20 text-primary ion-margin-bottom bold">Enjoy your retirement</h2>
+            <p class="ion-margin-top">Start your pension journey with us today and enjoy future in retirement</p>
+          </ion-label>
+        </ion-item>
+      </swiper-slide>
+    </ng-container>
+    <ng-container>
+      <swiper-slide>
+        <img src="assets/img/bg/Health and Retirement A.jpg" id="content-page" />
+        <ion-item lines="none" color="white">
+          <ion-label class="ion-text-wrap" align="left">
+            <h2 class="fs-20 text-primary ion-margin-bottom bold">Connect Your Friends Anytime</h2>
             <p class="ion-margin-top">To automatically focus the next input when done with the previous one we modify</p>
           </ion-label>
         </ion-item>
       </swiper-slide>
     </ng-container>
   </swiper-container>
+
+  <div class="fade-top"></div>
 </div>
+
