--- a/src/app/modules/calculator/calculator.page.html
+++ b/src/app/modules/calculator/calculator.page.html
@@ -1,42 +1,40 @@
 <ion-content [fullscreen]="true" color="light">
 
-  <ion-card class="no-shadow ion-no-margin" style="margin-top: 10px;margin-bottom: 10px;">
+  <ion-card class="no-shadow ion-no-margin" style="margin-bottom: 10px;">
     <!-- <ion-card class="no-shadow ion-no-margin" style="padding-top:10px;padding-bottom: 10px;margin-top: 10px;margin-bottom: 10px;"> -->
     <ion-row>
       <ion-col size="3">
         <img src="assets/img/payment.png" />
       </ion-col>
       <ion-col size="9">
-        <ion-item mode="ios" color="white" lines="none" detail="false">
           <ion-label>
             <h2 class="fs-14 text-dark">Your Retirement Income</h2>
             <h2 class="fs-22 text-primary">{{ result.compoundInterest || 0 | currency : globals.config.currency }}</h2>
           </ion-label>
-        </ion-item>
-        <ion-item mode="ios" color="white" lines="none" detail="false">
+          <br />
           <ion-label>
             <h2 class="fs-14 text-dark">{{ result.lipsumAmount || 0 | currency : globals.config.currency }} RSA Contribution</h2>
             <p class="fs-12 text-medium">Only paid after your reach</p>
           </ion-label>
-        </ion-item>
-        <ion-item mode="ios" color="white" lines="none" detail="false" style="margin-top: -5px;">
           <ion-label>
             <h2 class="fs-14 text-dark">{{ result.monthlyDrawDownAmount || 0 | currency : globals.config.currency }} monthly down amount</h2>
             <p class="fs-12 text-medium">RSA Contribution</p>
           </ion-label>
-        </ion-item>
       </ion-col>
     </ion-row>
   </ion-card>
 
-  <ion-card class="no-shadow ion-no-margin" style="padding-bottom: 10px;margin-top: 10px;margin-bottom: 10px;">
+
+  <calculator-form (onSubmit)="disabled = true;formdata = $event"></calculator-form>
+
+  <!-- <ion-card class="no-shadow ion-no-margin" style="padding-bottom: 10px;margin-top: 10px;margin-bottom: 10px;">
     <ion-list-header>
       <ion-label>
         <h2>Pension Calculator</h2>
       </ion-label>
     </ion-list-header>
     <calculator-form (onSubmit)="disabled = true;formdata = $event"></calculator-form>
-  </ion-card>
+  </ion-card> -->
 
   <p class="text-medium ion-text-center fs-12 ion-padding">
       BY providing your information, you will allow Aide Finance to create budget
