--- a/src/app/modules/calculator/components/calculator-form/calculator-form.component.html
+++ b/src/app/modules/calculator/components/calculator-form/calculator-form.component.html
@@ -1,7 +1,10 @@
-<form [formGroup]="calculatorForm" style="margin-top: 3px;padding-left: 10px;padding-right:10px;">
+<form [formGroup]="calculatorForm" style="margin-top: 3px;padding-left: 5px;padding-right:5px;">
   <ion-row>
     <ion-col size="12">
-      <ion-input (ionInput)="inputOnChange()" label="RSA Balance" label-placement="stacked" fill="outline" formControlName="balance" type="number" placeholder="0.00"></ion-input>
+      <ion-label class="fs-12 text-dark">RSA Balance</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
+        <ion-input class="ion-padding-start" (ionInput)="inputOnChange()" formControlName="balance" type="number" placeholder="0.00"></ion-input>
+      </ion-item>
       <div class="validation-errors fs-12 text-danger ion-padding-start">
         <div *ngFor="let validation of validation_messages.balance">
           <div class="error-message" *ngIf="calculatorForm.get('balance')?.hasError(validation.type) && calculatorForm.get('balance')?.touched">
@@ -13,13 +16,22 @@
       </div>
     </ion-col>
     <ion-col size="12">
-      <ion-input (ionInput)="inputOnChange()" label="RSA Contribution" label-placement="stacked" fill="outline" type="number" formControlName="contribution" placeholder="0.00"></ion-input>
+      <ion-label class="fs-12 text-dark">RSA Contribution</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
+        <ion-input (ionInput)="inputOnChange()" type="number" formControlName="contribution" placeholder="0.00"></ion-input>
+      </ion-item>
     </ion-col>
     <ion-col size="6">
-      <ion-input (ionInput)="inputOnChange()" label="Current Age" label-placement="stacked" fill="outline" type="number" formControlName="currentage" placeholder="0.00"></ion-input>
+      <ion-label class="fs-12 text-dark">Current Age</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
+        <ion-input (ionInput)="inputOnChange()" type="number" formControlName="currentage" placeholder="0.00"></ion-input>
+      </ion-item>
     </ion-col>
     <ion-col size="6">
-      <ion-input (ionInput)="inputOnChange()" label="Retired Age" label-placement="stacked" fill="outline" type="number" formControlName="retireage" placeholder="0.00"></ion-input>
+      <ion-label class="fs-12 text-dark">Retired Age</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
+        <ion-input (ionInput)="inputOnChange()" type="number" formControlName="retireage" placeholder="0.00"></ion-input>
+      </ion-item>
     </ion-col>
   </ion-row>
 </form>
