--- a/src/app/modules/home/components/quick-actions/quick-actions.component.scss
+++ b/src/app/modules/home/components/quick-actions/quick-actions.component.scss
@@ -37,8 +37,8 @@
                     height: 45px !important;
                     width: 45px !important;
                     i {
-                        font-size: 18px !important;
-                        color: var(--ion-color-primary) !important;
+                        font-size: 20px !important;
+                        color: var(--ion-color-white) !important;
                     }
                 }
             }
