--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -1,10 +1,10 @@
 <ion-content color="light">
 
-    <ion-card class="no-shadow ion-no-margin" style="padding-top:10px;margin-top: 10px;margin-bottom: 10px;">
-        <ion-item detail="true" lines="full" color="white" (click)="openProfilePage('profile')">
-            <ion-avatar class="no-shadow" slot="start">
+    <ion-card class="no-shadow ion-no-margin" style="margin-bottom: 10px;">
+        <ion-item detail="true" lines="full" color="white" (click)="openProfilePage('edit profile')">
+            <ion-avatar class="no-shadow avatar-md" slot="start">
                 <ion-img
-                    [src]="'https://ui-avatars.com/api/?name='+_userservice.user?.NAME || _userservice.user?.FIRSTNAME  + ' ' + _userservice.user?.SURNAME+'&color=ffffff&&background=000000'"></ion-img>
+                    [src]="'https://ui-avatars.com/api/?name='+_userservice.user?.FIRSTNAME  + ' ' + _userservice.user?.SURNAME+'&color=ffffff&&background=000000'"></ion-img>
             </ion-avatar>
             <ion-label>
                 <h2 class="fs-16">{{_userservice.user?.NAME || _userservice.user?.FIRSTNAME  + ' ' + _userservice.user?.SURNAME || 'not set' | titlecase}}</h2>
@@ -12,7 +12,7 @@
             </ion-label>
         </ion-item>
 
-        <ion-item mode="ios" color="white" detail="true" (click)="openProfilePage('Employer')">
+        <ion-item mode="ios" color="white" detail="true" (click)="openProfilePage('employment')">
             <ion-fab-button size="small"color="white" class="no-shadow" slot="start">
                 <i class="fi fi-rr-portrait text-dark fs-18"></i>
             </ion-fab-button>
@@ -21,7 +21,7 @@
             </ion-label>
         </ion-item>
 
-        <ion-item mode="ios" color="white" detail="true" (click)="openProfilePage('Next Of Kin')">
+        <ion-item mode="ios" color="white" detail="true" (click)="openProfilePage('next of kin')">
             <ion-fab-button size="small"color="white" class="no-shadow" slot="start">
                 <i class="fi fi-rr-users text-dark fs-18"></i>
             </ion-fab-button>
