--- a/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.html
+++ b/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-progress-bar *ngIf="refresh" type="indeterminate"></ion-progress-bar>
+  <ion-progress-bar color="tertiary" *ngIf="refresh" type="indeterminate"></ion-progress-bar>
   <ion-toolbar [color]="color">
     <ion-title mode="ios">
       <span *ngIf="title !== 'home'" class="fs-18">{{ title || 'not set' | titlecase }}</span>
@@ -25,13 +25,13 @@
     </ion-buttons>
 
     <ion-buttons slot="start">
-      <ion-avatar class="no-shadow" (click)="onclick.emit('profilemodal')">
+      <ion-avatar *ngIf="title !== 'home'" class="no-shadow" (click)="onclick.emit('profilemodal')">
         <ion-img [src]="'https://ui-avatars.com/api/?name='+username+'&color=000000&&background=f4f5f8'"></ion-img>
       </ion-avatar>
-      <!-- <ion-label  *ngIf="title == 'home'">
+      <ion-label  *ngIf="title == 'home'">
          <h2 class="fs-14 text-primary">{{greetings | titlecase}}, {{ username | titlecase }}</h2>
          <p class="fs-12 text-medium">{{ accountnumber | uppercase }}</p>
-      </ion-label> -->
+      </ion-label>
       <!-- <ion-item *ngIf="title == 'home'" lines="none" [color]="'green'" class="bg-transparent" mode="ios">
      </ion-item> -->
       <!-- <ion-button class="no-shadow" routerLink="/settings" routerDirection="forward">
