--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -533,8 +533,8 @@ a {
 
 .avatar-lg {
     display: inline-block;
-    width: 88px;
-    height: 88px;
+    width: 60px;
+    height: 60px;
 }
 
 .avatar-status {
@@ -615,18 +615,34 @@ ion-title {
     }
 }
 
-.onboard {
-    margin-top: -10px !important;
-    img {
-        width: 100% !important;
-        height: 60vh !important;
-        margin-top: 90px !important;
+// .onboard {
+//     margin-top: -10px !important;
+//     img {
+//         width: 100% !important;
+//         height: 60vh !important;
+//         margin-top: 90px !important;
+//     }
+// }
+// .onboard-button {
+//     position: fixed !important;
+//     top: 130px;
+//     z-index: 99999 !important;
+// }
+.form {
+    margin-top: 3px;
+    padding-left: 5px;
+    padding-right:5px;
+    ion-item {
+        margin-top: 5px !important;
+        ion-input, ion-select, ion-textarea {
+            padding-left: 15px !important;
+            font-size: 14px !important;
+        }
     }
-}
-.onboard-button {
-    position: fixed !important;
-    top: 150px;
-    z-index: 99999 !important;
+    ion-list-header {
+        margin-left: -15px !important;
+        font-size: 18px !important;
+    }
 }
 
 
@@ -640,7 +656,9 @@ ion-title {
     width: 100vw !important;
     border: 0px solid var(--ion-color-white) !important;
 }
-
+#content-page {
+    height: 70vh !important;
+}
 .bg-img {
 //   background-image: url('/assets/img/bg/radix mobile app design 6 girl.png');
 //   --background-image: url('/assets/img/bg/radix mobile app design 6 girl.png');
@@ -654,13 +672,23 @@ ion-title {
 //   top: 0 !important;
 
 
-    --background: url('/assets/img/bg/1.png') 50% 20% !important;
+    --background: url('/assets/img/bg/Monday motivation uche 1.jpg') 100% 50% !important;
+    background: url('/assets/img/bg/Monday motivation uche 1.jpg') 100% 50% !important;
     background-repeat: no-repeat!important;
     background-size: cover !important;
-    // height: 100vh !important;
-    // width: 60% !important;
-    position: fixed !important;
+    height: 100vh !important;
+    width: 100% !important;
+    // position: fixed !important;
     // background-color:  !important;
 //   background-size: cover !important;
 //   background-repeat: no-repeat !important;
 }
+
+// .fade-top {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 75vh; /* Adjust the height of the fading effect */
+//     background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)); /* Adjust the opacity values as needed */
+//   }
