added forot and change password

--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -30,6 +30,15 @@
             </ion-label>
         </ion-item>
 
+        <ion-item mode="ios" color="white" detail="true"(click)="globals.openModal('changepasswordmodal')">
+            <ion-fab-button size="small"color="white" class="no-shadow" slot="start">
+                <i class="fi fi-rr-users text-dark fs-18"></i>
+            </ion-fab-button>
+            <ion-label>
+                <h2 class="fs-14">Change Passcode</h2>
+            </ion-label>
+        </ion-item>
+
         <!-- <ion-item mode="ios" lines="none" detail="false">
             <ion-fab-button size="small"color="white" class="no-shadow" slot="start">
                 <i class="fi fi-rr-palette fs-18 text-dark"></i>
