--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -10,6 +10,7 @@
 <livechat-modal [isOpen]="globals.modalData?.livechatmodal || false"></livechat-modal>
 <feedback-modal [isOpen]="globals.modalData?.feedbackmodal || false"></feedback-modal>
 <support-modal [isOpen]="globals.modalData?.supportmodal || false"></support-modal>
+<changepassword-modal [isOpen]="globals.modalData?.changepasswordmodal || false"></changepassword-modal>
 <investmentoptions-modal [isOpen]="globals.modalData?.investmentoptionsmodal || false"></investmentoptions-modal>
 <accounts-details-modal [isOpen]="globals.modalData?.accountsdetailsmodal|| false"></accounts-details-modal>
 <success-modal [isOpen]="globals.modalData?.successmodal || false" (continue)="onModalClosed($event);globals.closeModal('successmodal')" [data]="globals.modalData || {}" [activeColor]="globals.modalData.color || 'primary'" [class]="'modal-center modal-center-sm modal-w70'"></success-modal>
