--- a/src/theme/md.scss
+++ b/src/theme/md.scss
@@ -1,9 +1,9 @@
 
 :root[mode="md"].plt-android, :root {
-    --ion-font-family: 'Moderat', arial!important;
+    --ion-font-family: 'Moderat', arial !important;
     -webkit-font-smoothing: antialiased !important;
     -moz-osx-font-smoothing: grayscale !important;
-    // font-weight: 400 !important;
+    font-weight: 400 !important;
     font-display: swap !important;
 
     ion-title {
