--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -174,9 +174,7 @@
 
 
     <p class="text-medium ion-text-center fs-12 ion-padding">
-        BY providing your information, you will allow Aide Finance to create budget
-        under user information and manage your finance which take less than 24 hours
-        to process it
+        BY providing your information, you will allow Radix Pension to provide best services with the information  provided and manage your information on our secured systems. 
     </p>
 
 </ion-content>
