--- a/src/app/modules/calculator/calculator.page.html
+++ b/src/app/modules/calculator/calculator.page.html
@@ -37,10 +37,8 @@
   </ion-card> -->
 
   <p class="text-medium ion-text-center fs-12 ion-padding">
-      BY providing your information, you will allow Aide Finance to create budget
-      under user information and manage your finance which take less than 24 hours
-      to process it
-  </p>
+    BY providing your information, you will allow Radix Pension to provide best services with the information  provided and manage your information on our secured systems. 
+</p>
 </ion-content>
 
 <ion-footer class="ion-padding-start ion-padding-end ion-no-border bg-transparent">
